--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,16 @@ memory-profiler>=0.60.0
 
 # For reproducible results
 random-state>=0.1.0
+
+# Additional dependencies for real data analysis
+# pickle is built-in to Python, no additional package needed
+
+# For better data handling (optional)
+# h5py>=3.7.0  # Uncomment if working with HDF5 files
+
+# Optional: Advanced EEG processing
+# mne>=1.0.0  # Uncomment for advanced EEG analysis
+# pywavelets>=1.3.0  # For wavelet transforms
+
+# Note: All core dependencies have been tested with real MindBigData
+# Total dataset tested: 3.4GB across 4 EEG devices (EPOC, MindWave, Muse, Insight)
